--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "joi": "^17.11.0",
     "mongodb": "6.2",
     "morgan": "^1.10.0",
+    "morgan-body": "^2.6.9",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
